<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_medium">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_medium">

        <ImageView
            android:layout_width="@dimen/spacing_large"
            android:layout_height="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_medium"
            android:src="@drawable/ic_place"
            android:tint="@color/grey_80" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/SAVE"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_xmedium"
        android:paddingRight="@dimen/spacing_xmedium">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:gravity="top|start"
                android:hint="@string/hint_address"
                android:lines="3"
                android:maxLength="300"
                android:maxLines="4"
                android:minLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spn_shipping_options"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:spinnerMode="dialog" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_shipping_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_shipping_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:hint="@string/hint_shipping"
                android:inputType="text"
                android:focusable="false"
                android:longClickable="false"
                android:drawableEnd="@drawable/ic_down" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/lyt_shipping_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true">

                <EditText
                    android:id="@+id/et_shipping_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:focusable="false"
                    android:longClickable="false"
                    android:hint="@string/hint_shipping_date" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/ib_shipping_date"
                android:layout_width="@dimen/spacing_xlarge"
                android:layout_height="@dimen/spacing_xlarge"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_date"
                android:tint="@color/colorPrimary" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:gravity="top|start"
                android:hint="@string/hint_comment"
                android:lines="3"
                android:maxLength="500"
                android:maxLines="4"
                android:minLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</LinearLayout>