<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:minHeight="?attr/actionBarSize"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_middle"
                android:text="#GAZE203209242"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />


            <ImageButton
                android:id="@+id/copy"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_content_copy"
                android:tint="@color/grey_20" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginRight="@dimen/spacing_medium"
                android:padding="@dimen/spacing_middle"
                android:src="@drawable/ic_clear" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:background="@color/grey_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/spacing_large"
                android:layout_height="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_medium"
                android:src="@drawable/ic_date"
                android:tint="@color/grey_80" />

            <TextView
                android:id="@+id/order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="16 Mar 2016 12:33"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/status_icon"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginRight="@dimen/spacing_medium"
                android:src="@drawable/ic_delivering"
                android:tint="@android:color/holo_green_dark"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order Status"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_60"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation"
            app:cardUseCompatPadding="false" >

            <fragment
                class="com.ecotioco.gaze.fragment.DeliveryInfoFragment"
                android:id="@+id/deliver_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:paddingBottom="@dimen/spacing_middle"
            android:scrollbars="vertical"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <LinearLayout
            android:id="@+id/lyt_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_10"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/title_sub_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                    android:textColor="@color/grey_80"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/sub_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120,000 VND"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                    android:textColor="@color/grey_80" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipping_fee"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/grey_60"
                    android:textStyle="normal" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/shipping_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15,000 VND"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/grey_60"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/total_fees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="135,000 VND"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrice"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>